# sfem

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
apps/: .gitignore  CMakeLists.txt
apps/mesh_utils/: CMakeLists.txt  gmsh_to_sfem.cc  sfem_part_mesh.cc  sfem_to_vtk.cc
cmake/: config.cmake
doc/: Doxyfile
src/: CMakeLists.txt  sfem.h
src/common/: CMakeLists.txt  config.h  error.cc  error.h  init.cc  init.h  logger.cc  logger.h  mat_ops.h  sfem_common.h
src/core/: CMakeLists.txt  field.cc  field.h  kernel.cc  kernel.h  mono_field_assembler.cc  mono_field_assembler.h  sfem_core.h
src/core/kernels/: CMakeLists.txt  sfem_kernel.h
src/core/kernels/basic/: diffusion.cc  diffusion.h  mass.cc  mass.h  source.cc  source.h
src/core/kernels/elasticity/: elasticity.cc  elasticity.h  elasticity_2d.cc  elasticity_2d.h  elasticity_3d.cc  elasticity_3d.h  gravity.cc  gravity.h  pressure.cc  pressure.h  sfem_elasticity.h  shell.cc  shell.h  thermal_stress.cc  thermal_stress.h
src/core/kernels/heat_transfer/: convective_boundary.cc  convective_boundary.h  sfem_heat_transfer.h
src/core/solvers/: CMakeLists.txt  dynamic_solver.cc  dynamic_solver.h  modal_solver.cc  modal_solver.h  sfem_solvers.h  solver.cc  solver.h  static_solver.cc  static_solver.h
src/core/time_integrators/: implicit_euler.cc  implicit_euler.h  sfem_time_integrators.h  time_integrator.cc  time_integrator.h
src/fe/: CMakeLists.txt  finite_element.cc  finite_element.h  sfem_fe.h
src/fe/basis/: CMakeLists.txt  basis.cc  basis.h  line_basis.cc  point_basis.cc  tet_basis.cc  tri_basis.cc
src/geo/: CMakeLists.txt  sfem_geo.h  shape.cc  shape.h  vec.cc  vec.h
src/io/: CMakeLists.txt  field.cc  field.h  gmsh.cc  gmsh.h  mesh.cc  mesh.h  sfem_io.h  vtk.cc  vtk.h
src/la/: CMakeLists.txt  petsc.cc  petsc.h  sfem_la.h  slepc.cc  slepc.h  sparsity_pattern.cc  sparsity_pattern.h
src/mesh/: CMakeLists.txt  cell.cc  cell.h  mesh.cc  mesh.h  mesh_partitioner.cc  mesh_partitioner.h  region.cc  region.h  sfem_mesh.h
tests/: .gitignore
tests/elasticity/: CMakeLists.txt  main.cc  run.sh
tests/elasticity/Mesh3D/: CellPartition  Cells  NodePartition  Nodes  Regions  beam.msh2
tests/laplace/: CMakeLists.txt  log_0  log_1  log_2  log_3  main.cc  run.sh
tests/laplace/Mesh/: Beam.msh2  CellPartition  NodePartition
tests/laplace/Mesh1D/: Cells  Nodes  Regions
tests/laplace/Mesh2D/: CellPartition  Cells  NodePartition  Nodes  Regions
tests/laplace/Mesh3D/: CellPartition  Cells  NodePartition  Nodes  Regions
